--- a/Form/index.html
+++ b/Form/index.html
@@ -23,7 +23,7 @@
             <ul class="ul2"></ul>
         </div>
         <div>
-            <laber for="#phone">Phone number:</laber>
+            <label for="#phone">Phone number:</label>
             <input type="tel" id="phone" placeholder="enter your phone">
             <ul class="phone"></ul>
         </div>
@@ -47,11 +47,8 @@
             <input type="password" id="confPass" placeholder="confirm your password">
             <ul class="ul7"></ul>
         </div>
-        <button id="submit">submit</button>
+        <button id="submit"><a></a>Submit</button>
     </form>
-    <video width="200px">
-        <source src="https://youtu.be/2unnx7ZJ2Jk?si=mq6QfqcyTrEYJHe4" type="video/mp4">
-    </video>
     <script src="./script.js"></script>
 </body>
 </html>
