--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#about" class="text-decoration-none  text-warning">About</a></li>
             <li><a href="#cats" class="text-decoration-none  text-warning">Services</a></li>
             <li><a href="#hotel" class="text-decoration-none  text-warning">Hotel</a></li>
-            <li><a href="#" class="text-decoration-none  text-warning">Contact</a></li>
+            <li><a href="#cont" class="text-decoration-none  text-warning">Contact</a></li>
         </ul>
     </nav>
     <!-- Nav-bar end -->
@@ -183,5 +183,15 @@
         </div>
     </div>
     <!-- Hotel end -->
+
+    <!-- Contact start -->
+    <div class="container  cont" id="cont">
+        <div class="text-warning   d-flex   flex-column   p-5   font">
+            <span>made by:</span><br> 
+            <p>ENG/ <a href="https://www.linkedin.com/in/asmaa-maryah-86028a2b3" target="_blank" class="name">Asmaa Maryah</a></p>
+        </div>
+        <img src="./images/anubis.jpg" alt="">
+    </div>
+
 </body>
 </html
