--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <span class="visually-hidden">Next</span>
     </button>
     </div>
-    <!-- Nav-bar end -->
+    <!-- Home end -->
 
     <!-- About strat -->
     <div class="container" id="about">
